# openhand

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  compose.deploy.yml  docker-compose.yml  justfile  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  data_correction.yml  feature_request.yml
.github/workflows/: ci.yml
app/: __init__.py  config.py  db.py  logging_config.py  logging_utils.py  main.py  models.py  schemas.py  seed_data.py  ui.py
app/components/: About.jinja  Clarify.jinja  Confirm.jinja  DeterminationCard.jinja  ErrorAlert.jinja  ExplanationCard.jinja  FeedbackForm.jinja  Form.jinja  Home.jinja  IncompleteResults.jinja  Layout.jinja  Mission.jinja  NextSteps.jinja  QuestionUpdate.jinja  ResourceSearchCard.jinja  Results.jinja  StatusBadge.jinja  SubmitButton.jinja
app/engine/: __init__.py  eitc.py  medicaid.py  medicare.py  runner.py  snap.py  thresholds.py
app/llm/: __init__.py  client.py  explain.py  intake.py  supplemental.py
app/routers/: api_v1.py  screen.py
app/services/: disability_lookup.py  resource_search.py
claudedocs/: research_intake_questions_20260713-1954.md
docs/superpowers/specs/: 2026-07-14-about-page-design.md  2026-07-14-mission-page-design.md
tests/: conftest.py  eval_households.json  test_engine_units.py  test_eval_households.py  test_intake.py  test_logging_utils.py  test_resource_search.py  test_schemas.py  test_web.py
